<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/add_apply"
        android:textColor="@color/text_color_bar"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/product_type"
            android:textColor="@color/text_color_bar"
            android:textSize="14sp" />

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:id="@+id/ns_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_edit_apply"
            android:hint="@string/choice_type"
            android:paddingLeft="10dp"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/product_name"
            android:textColor="@color/text_color_bar"
            android:textSize="14sp" />

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:id="@+id/ns_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_edit_apply"
            android:hint="@string/choice_name"
            android:paddingLeft="10dp"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/product_size"
            android:textColor="@color/text_color_bar"
            android:textSize="14sp" />

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:id="@+id/ns_size"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_edit_apply"
            android:hint="@string/choice_size"
            android:paddingLeft="10dp"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/apply_count"
            android:textColor="@color/text_color_bar"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/Base.V7.Widget.AppCompat.EditText"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_edit_apply"
            android:elevation="-2dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:lineSpacingExtra="2dp"
            android:padding="2dp"
            android:textColor="@color/text_color_bar"
            android:textColorHint="@color/hint_text_gray"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_commit_cancel"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_commit_apply"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>