<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_cs_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dialog_cs_cancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_dialog"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/main_color_blue"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/dialog_cs_cancel"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_order_pay_mode_money"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/order_pay_mode_money"
            android:textColor="@color/main_color_blue"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cline_low" />

        <TextView
            android:id="@+id/tv_order_pay_mode_weixin"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/order_pay_mode_weixin"
            android:textColor="@color/main_color_blue"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cline_low" />

        <TextView
            android:id="@+id/tv_order_pay_mode_debt"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/order_pay_mode_debt"
            android:textColor="@color/main_color_blue"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>