<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/tab_text_size"
        android:paddingTop="@dimen/tab_text_size"
        android:text="@string/add_apply"
        android:textColor="@color/text_color_bar"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cline_deep" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/tab_text_size"
        android:text="@string/apply_count"
        android:textColor="@color/text_color_bar"
        android:textSize="14sp" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_amount"
        style="@style/Base.V7.Widget.AppCompat.EditText"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_edit_apply"
        android:elevation="-2dp"
        android:gravity="center_vertical"
        android:inputType="number"
        android:lineSpacingExtra="2dp"
        android:padding="4dp"
        android:textColor="@color/text_color_bar"
        android:textColorHint="@color/hint_text_gray"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/tab_text_size"
        android:background="@color/cline_deep" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/cancel"
            android:textColor="@color/text_color_bar"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/cline_deep" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/confirm"
            android:textColor="@color/text_color_bar"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>