<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/include_tb"
        layout="@layout/tb_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_sign"
        android:layout_below="@+id/include_tb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_wx_image"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_wx"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/order_wx_code" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/info_line_height"
                android:background="@color/activity_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/order_pay_info"
                android:textColor="@color/text_color_bar"
                android:textSize="@dimen/font_info_line_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/info_line_height02"
                android:background="@color/activity_bg">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/cline_deep" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_align_left_margin"
                    android:text="@string/order_balance_title3"
                    android:textColor="@color/text_color_bar"
                    android:textSize="@dimen/font_info_line_small" />

                <TextView
                    android:id="@+id/tv_order_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/text_align_left_margin"
                    android:text="100"
                    android:textColor="@color/text_color_bar"
                    android:textSize="@dimen/font_info_line_small" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/info_line_height02"
                android:background="@color/activity_bg">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/cline_deep" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_align_left_margin"
                    android:text="@string/order_pay_mode"
                    android:textColor="@color/text_color_bar"
                    android:textSize="@dimen/font_info_line_small" />

                <TextView
                    android:id="@+id/tv_pay_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/text_align_left_margin"
                    android:text="微信"
                    android:textColor="@color/text_color_bar"
                    android:textSize="@dimen/font_info_line_small" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_line_height"
                    android:layout_marginTop="10dp"
                    android:background="@color/activity_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/ticket_info"
                    android:textColor="@color/text_color_bar"
                    android:textSize="@dimen/font_info_line_small" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_ticket"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/activity_bg"
                        android:scrollbars="none" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_line_height"
                    android:layout_marginTop="10dp"
                    android:background="@color/activity_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/bucket_info"
                    android:textColor="@color/text_color_bar"
                    android:textSize="@dimen/font_info_line_small" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_bucket"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/activity_bg"
                        android:scrollbars="none" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/info_line_height"
                    android:layout_marginTop="10dp"
                    android:background="@color/activity_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/remark"
                    android:textColor="@color/text_color_bar"
                    android:textSize="@dimen/font_info_line_small"
                    android:visibility="gone" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_remark"
                    style="@style/Base.V7.Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_edit_apply"
                    android:elevation="-2dp"
                    android:gravity="left|top"
                    android:lineSpacingExtra="2dp"
                    android:padding="10dp"
                    android:textColor="@color/text_color_bar"
                    android:textColorHint="@color/hint_text_gray"
                    android:textSize="13sp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@color/main_color_red"
        android:text="@string/order_sign"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <include layout="@layout/net_loading" />


</RelativeLayout>